# ujin-task

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/api/: currency_rates.py  dependencies.py  endpoints.py  middlewares.py  schemas.py  services.py
app/core/: logger.py  schemas.py  services.py  settings.py  setup_parser.py
app/services/: currency_service.py  rate_service.py
service/: __main__.py
